--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,52 @@
 .App {
-  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
   background-color: black;
+  color: lime;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
 }
-.log {
-  
+
+.mylogApp {
+  width: 100%;
+  max-width: 600px;
+  overflow-y: auto;
+  border: 1px solid lime;
+  padding: 20px;
+  box-shadow: 0 0 10px lime;
+}
+
+.log-entry {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  white-space: nowrap;
+}
+
+.icon {
+  margin-right: 10px;
+  font-size: 20px;
+}
+
+.input-prompt {
+  display: flex;
+  margin-top: 10px;
+  font-size: 18px;
+}
+
+.blinking-cursor {
+  display: inline-block;
+  background-color: lime;
+  width: 8px;
+  height: 16px;
+  margin-left: 5px;
+  animation: blink 1s steps(2, start) infinite;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
 }
