[feat]로그윈도우창에 세팅 메뉴 추가

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@
   align-items: center;
   padding: 10px;
 }
+body {
+  margin: 0;
+  overflow: hidden;
+  background: black;
+}
+
 
 .mylogApp {
   width: 100%;
