--- a/src/Component/LogWindow/CMDLog.css
+++ b/src/Component/LogWindow/CMDLog.css
@@ -1,4 +1,5 @@
 .mylogApp {
+  background-color: rgba(0, 0, 0, 0.5);
   width: 50%;
   max-width: 600px;
   height: 90%;
@@ -8,6 +9,7 @@
   padding: 20px;
   box-shadow: 0 0 10px lime;
   position: relative;
+  
 }
 
 .log-entry {
