--- a/src/Component/LogWindow/CMDLog.css
+++ b/src/Component/LogWindow/CMDLog.css
@@ -106,3 +106,34 @@
   font-size: 20px;
   cursor: pointer;
 }
+.icon img {
+  width: 25px;
+  height: 25px;
+  object-fit: cover;
+  margin-right: 5px;
+}
+.icon-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+  gap: 10px;
+  justify-items: center;
+}
+
+.icon-option {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.icon-option:hover {
+  transform: scale(1.1);
+}
+
+.icon-image {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+  margin-bottom: 5px;
+}
