--- a/src/Component/SettingsPopup/SettingsPopup.css
+++ b/src/Component/SettingsPopup/SettingsPopup.css
@@ -1,30 +1,16 @@
-
-.hamburger-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 30px;
-    height: 30px;
-    background-color: black;
-    border: 1px solid lime;
-    color: lime;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  
-  .settings-popup {
-    position: absolute;
-    top: 20%;
-    right: 5%;
-    width: 300px;
-    padding: 20px;
-    border: 1px solid lime;
-    background-color: black;
-    color: lime;
-    box-shadow: 0 0 10px lime;
-    z-index: 200;
-  }
-  
+.settings-popup {
+  position: fixed; /* fixed로 변경하여 뷰포트 기준으로 위치 설정 */
+  top: 50%; /* 화면의 세로 중앙 */
+  left: 50%; /* 화면의 가로 중앙 */
+  transform: translate(-50%, -50%); /* 정확히 중앙으로 정렬 */
+  width: 250px;
+  padding: 20px;
+  border: 1px solid lime;
+  background-color: black;
+  color: lime;
+  box-shadow: 0 0 10px lime;
+  z-index: 200;
+}
   .settings-popup h3 {
     margin-bottom: 10px;
   }
@@ -43,3 +29,15 @@
     cursor: pointer;
   }
   
+  .hamburger-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    background-color: black;
+    border: 1px solid lime;
+    color: lime;
+    font-size: 20px;
+    cursor: pointer;
+  }
