--- a/src/Component/LogWindow/CMDLog.css
+++ b/src/Component/LogWindow/CMDLog.css
@@ -6,7 +6,8 @@
   width: 50%; /* 폭을 화면의 50%로 설정 */
   height: 90%; /* 높이를 화면의 90%로 설정 */
   padding: 20px;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   background-color: #000;
   box-shadow: 0 0 15px lime;
   overflow-y: auto; /* 내용이 넘칠 경우 세로 스크롤 생성 */
@@ -20,17 +21,29 @@
   margin-bottom: 10px;
   white-space: nowrap;
   font-size: 1rem; /* 기본 글자 크기 */
+  margin-bottom: 5px;
+}
+
+.input-prompt {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  font-size: 1rem; /* 기본 글자 크기 */
+}
+
+.input-pointer {
+  font-size: 1rem;
+  margin-right: 10px;
+  font-weight: bold;
 }
 
 .icon {
+  display: flex;
+  align-items: center;
   margin-right: 10px;
   font-size: 20px;
 }
 
-.input-prompt {
-  margin-top: 10px;
-  font-size: 1rem; /* 기본 글자 크기 */
-}
 
 .blinking-cursor {
   display: inline-block;
@@ -62,7 +75,8 @@
 
 .popup-content {
   background-color: black;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   padding: 10px;
   box-shadow: 0 0 10px lime;
   width: 90%; /* 팝업 너비: 모바일에서 90% */
@@ -84,7 +98,8 @@
 
 .icon-option {
   padding: 10px;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   color: lime;
   background-color: black;
   cursor: pointer;
@@ -94,7 +109,8 @@
 
 .status-option {
   padding: 10px;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   color: lime;
   background-color: black;
   cursor: pointer;
@@ -110,10 +126,12 @@
 
 .common-button {
   background-color: black;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   color: lime;
   font-size: 1rem;
   cursor: pointer;
+  margin-left: 10px;
 }
 
 .icon img {
@@ -190,4 +208,26 @@
   .status-option {
     font-size: 0.8rem; /* 상태 옵션 글자 크기 축소 */
   }
+}
+
+
+.mylog-icon {
+  display: flex;
+  width: 100px; 
+  height: 100px; 
+  font-size: 60px;
+  /* color: lime;
+  border: 1px solid lime;
+  border-radius: 3px;
+  padding: 10px; */
+  margin: 100px;
+  background-color: black;
+  /* box-shadow: 0 0 10px lime; */
+  cursor: pointer;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.mylog-icon:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 20px lime;
 }
