--- a/src/Component/Login/CMDLoginPopup.css
+++ b/src/Component/Login/CMDLoginPopup.css
@@ -5,7 +5,8 @@
   transform: translate(-50%, -20%);
   width: 400px;
   padding: 20px;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   background-color: #000;
   box-shadow: 0 0 15px lime;
   text-align: center;
@@ -25,7 +26,8 @@
 
 .cmd-input {
   padding: 10px;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   background-color: black;
   color: lime;
   font-family: 'Courier New', Courier, monospace;
@@ -34,7 +36,8 @@
 
 .cmd-button {
   padding: 10px;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   background-color: black;
   color: lime;
   cursor: pointer;
