--- a/src/Component/Nickname/CMDNicknamePopup.css
+++ b/src/Component/Nickname/CMDNicknamePopup.css
@@ -5,7 +5,8 @@
   transform: translate(-50%, -20%);
   width: 400px;
   padding: 20px;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   background-color: #000;
   box-shadow: 0 0 15px lime;
   text-align: center;
@@ -17,6 +18,11 @@
   margin-bottom: 20px;
 }
 
+.cmd-error {
+  color: red;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
 .nickname-content {
   display: flex;
   flex-direction: column;
@@ -25,7 +31,8 @@
 
 .cmd-input {
   padding: 10px;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   background-color: black;
   color: lime;
   font-family: 'Courier New', Courier, monospace;
@@ -34,7 +41,8 @@
 
 .cmd-button {
   padding: 10px;
-  border: 1px solid lime;
+    border: 1px solid lime;
+  border-radius: 3px;
   background-color: black;
   color: lime;
   cursor: pointer;
