--- a/src/Component/LogWindow/CMDLog.css
+++ b/src/Component/LogWindow/CMDLog.css
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translate(-50%, 0);
   width: 50%; /* 폭을 화면의 50%로 설정 */
-  height: 90%; /* 높이를 화면의 90%로 설정 */
+  height: 80%;
   padding: 20px;
     border: 1px solid lime;
   border-radius: 3px;
@@ -65,7 +65,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 60%;
   background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
@@ -82,6 +82,7 @@
   box-shadow: 0 0 10px lime;
   width: 90%; /* 팝업 너비: 모바일에서 90% */
   text-align: center;
+  position: relative;
 }
 
 .icon-grid {
@@ -135,6 +136,18 @@
   margin-left: 10px;
 }
 
+.close-button {
+  position: absolute;
+  top: 10px; /* 팝업 내부 상단 */
+  right: 10px; /* 팝업 내부 오른쪽 */
+  background-color: black;
+  border: 1px solid lime;
+  border-radius: 3px;
+  color: lime;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
 .icon img {
   width: 25px;
   height: 25px;
@@ -165,7 +178,6 @@
   width: 40px;
   height: 40px;
   object-fit: contain;
-  margin-bottom: 5px;
 }
 
 /* 반응형 디자인 */
