--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   
 }
 body {
+  font-family: 'Courier New', Courier, monospace;
   width: fit-content;
   overflow: hidden;
   background: black;
