--- a/src/Component/SettingsPopup/SettingsPopup.css
+++ b/src/Component/SettingsPopup/SettingsPopup.css
@@ -5,7 +5,7 @@
   transform: translate(-50%, -50%); /* 정확히 중앙으로 정렬 */
   width: 250px;
   padding: 20px;
-    border: 1px solid lime;
+  border: 1px solid lime;
   border-radius: 3px;
   background-color: black;
   color: lime;
@@ -14,6 +14,7 @@
 }
   .settings-popup h3 {
     margin-bottom: 10px;
+    margin-top: 25px;
   }
   
   .settings-popup .color-option {
@@ -26,11 +27,16 @@
     width: 20px;
     height: 20px;
     margin-right: 10px;
-      border: 1px solid lime;
-  border-radius: 3px;
+    border: 1px solid lime;
+    border-radius: 3px;
     cursor: pointer;
   }
   
+  .settings-buttons{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+  }
   .hamburger-button {
     position: absolute;
     top: 10px;
@@ -38,9 +44,34 @@
     width: 30px;
     height: 30px;
     background-color: black;
-      border: 1px solid lime;
-  border-radius: 3px;
+    border: 1px solid lime;
+    border-radius: 3px;
     color: lime;
     font-size: 20px;
     cursor: pointer;
+  }
+  .close-button{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    position: absolute;
+    top: 10px; /* 팝업 내부 상단 */
+    right: 10px; /* 팝업 내부 오른쪽 */
+    background-color: black;
+    border: 1px solid lime;
+    border-radius: 3px;
+    color: lime;
+    font-size: 1rem;
+    cursor: pointer;
+  }
+  .settings-button{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    background-color: black;
+    border: 1px solid lime;
+    border-radius: 3px;
+    color: lime;
+    font-size: 1rem;
+    cursor: pointer;
+    padding-left: 10px;
+    padding-right: 10px;
   }
