--- a/src/Component/LogWindow/CMDLog.css
+++ b/src/Component/LogWindow/CMDLog.css
@@ -3,14 +3,14 @@
   top: 5%;
   left: 50%;
   transform: translate(-50%, 0);
-  width: 50%; /* 폭을 화면의 50%로 설정 */
+  width: 40%; /* 폭을 화면의 50%로 설정 */
   height: 80%;
   padding: 20px;
     border: 1px solid lime;
   border-radius: 3px;
   background-color: #000;
   box-shadow: 0 0 15px lime;
-  overflow-y: auto; /* 내용이 넘칠 경우 세로 스크롤 생성 */
+  overflow-y: hidden; 
   overflow-x: hidden; /* 가로 스크롤 비활성화 */
   z-index: 50;
 }
@@ -59,30 +59,42 @@
     opacity: 0;
   }
 }
-
 .popup {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 60%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex; /* 플렉스 박스 사용 */
+  justify-content: center; /* 가로 정렬 */
+  align-items: center; /* 세로 정렬 */
+  max-height: 80%; /* 팝업의 최대 높이를 설정 */
+  overflow-y: auto; /* 세로 스크롤 활성화 */
   z-index: 10;
-  
 }
 
 .popup-content {
   background-color: black;
-    border: 1px solid lime;
+  border: 1px solid lime;
   border-radius: 3px;
   padding: 10px;
   box-shadow: 0 0 10px lime;
-  width: 90%; /* 팝업 너비: 모바일에서 90% */
+  width: 90%; 
+  max-height: 80%; /* 팝업의 최대 높이를 설정 */
+  overflow-y: auto; /* 세로 스크롤 활성화 */
   text-align: center;
   position: relative;
+}
+
+
+.popup-content::-webkit-scrollbar-thumb {
+  background: lime; /* 스크롤바 색상 */
+  border-radius: 10px; /* 스크롤바 모서리 둥글게 */
+}
+
+.popup-content::-webkit-scrollbar-track {
+  background: black; /* 스크롤바 트랙 색상 */
 }
 
 .icon-grid {
