[feat]상태값 인풋 css수정

--- a/src/Component/LogWindow/CMDLog.css
+++ b/src/Component/LogWindow/CMDLog.css
@@ -133,6 +133,10 @@
   font-size: 16px;
 }
 
+.status {
+  margin-left: 0.5em;
+}
+
 .icon-option:hover, .status-option:hover {
   background-color: lime;
   color: black;
@@ -145,7 +149,7 @@
     border: 1px solid lime;
   border-radius: 3px;
   color: lime;
-  font-size: 1rem;
+  font-size: 0.9rem;
   cursor: pointer;
   margin-left: 10px;
 }
