--- a/src/Component/LogWindow/CMDLog.css
+++ b/src/Component/LogWindow/CMDLog.css
@@ -10,7 +10,7 @@
   border-radius: 3px;
   background-color: #000;
   box-shadow: 0 0 15px lime;
-  overflow-y: hidden; 
+  overflow-y: auto; 
   overflow-x: hidden; /* 가로 스크롤 비활성화 */
   z-index: 50;
 }
@@ -58,20 +58,6 @@
   50% {
     opacity: 0;
   }
-}
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  display: flex; /* 플렉스 박스 사용 */
-  justify-content: center; /* 가로 정렬 */
-  align-items: center; /* 세로 정렬 */
-  max-height: 80%; /* 팝업의 최대 높이를 설정 */
-  overflow-y: auto; /* 세로 스크롤 활성화 */
-  z-index: 10;
 }
 
 .popup-content {
