--- a/src/Component/SettingsPopup/SettingsPopup.css
+++ b/src/Component/SettingsPopup/SettingsPopup.css
@@ -1,5 +1,5 @@
 .settings-popup {
-  position: fixed; /* fixed로 변경하여 뷰포트 기준으로 위치 설정 */
+  position: fixed; 
   top: 50%; /* 화면의 세로 중앙 */
   left: 50%; /* 화면의 가로 중앙 */
   transform: translate(-50%, -50%); /* 정확히 중앙으로 정렬 */
