--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+  user-select: none; /* 텍스트 선택 비활성화 */
+  -webkit-user-drag: none; /* 요소 드래그 비활성화 */
   
 }
 body {
@@ -14,5 +16,7 @@ body {
   width: fit-content;
   overflow: hidden;
   background: black;
+  user-select: none; /* 텍스트 선택 비활성화 */
+  -webkit-user-drag: none; /* 요소 드래그 비활성화 */
 }
 
