--- a/src/Component/LogWindow/CMDLog.css
+++ b/src/Component/LogWindow/CMDLog.css
@@ -199,15 +199,6 @@
   object-fit: contain;
 }
 
-.loading-spinner {
-  width: 20px;
-  height: 20px;
-  border: 2px solid transparent;
-  border-top: 2px solid lime;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-}
-
 @keyframes spin {
   from {
     transform: rotate(0deg);
@@ -280,4 +271,10 @@
 .mylog-icon:hover {
   transform: scale(1.1);
   box-shadow: 0 0 20px lime;
+}
+
+.connecting {
+  color: lime;
+  animation: blink 1s steps(2, start) infinite;
+  font-weight: bold;
 }
