--- a/src/Component/Login/CMDLoginPopup.css
+++ b/src/Component/Login/CMDLoginPopup.css
@@ -57,6 +57,11 @@
   color: black;
 }
 
+.warnning {
+  color: #FFD700;
+  font-size: 12px;
+}
+
 /* 반응형 스타일 */
 @media screen and (max-width: 768px) {
   .login-popup {
