--- a/src/Component/SettingsPopup/SettingsPopup.css
+++ b/src/Component/SettingsPopup/SettingsPopup.css
@@ -12,66 +12,88 @@
   box-shadow: 0 0 10px lime;
   z-index: 200;
 }
-  .settings-popup h3 {
-    margin-bottom: 10px;
-    margin-top: 25px;
-  }
-  
-  .settings-popup .color-option {
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .settings-popup .color-sample {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-    border: 1px solid lime;
-    border-radius: 3px;
-    cursor: pointer;
-  }
-  
-  .settings-buttons{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
-  }
-  .hamburger-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 30px;
-    height: 30px;
-    background-color: black;
-    border: 1px solid lime;
-    border-radius: 3px;
-    color: lime;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  .close-button{
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    position: absolute;
-    top: 10px; /* 팝업 내부 상단 */
-    right: 10px; /* 팝업 내부 오른쪽 */
-    background-color: black;
-    border: 1px solid lime;
-    border-radius: 3px;
-    color: lime;
-    font-size: 1rem;
-    cursor: pointer;
-  }
-  .settings-button{
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    background-color: black;
-    border: 1px solid lime;
-    border-radius: 3px;
-    color: lime;
-    font-size: 1rem;
-    cursor: pointer;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
+.settings-popup h3 {
+  margin-bottom: 10px;
+  margin-top: 25px;
+}
+
+.settings-popup .color-option {
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.settings-popup .color-sample {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  border: 1px solid lime;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.setting-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background-color: black;
+  border: 1px solid lime;
+  border-radius: 3px;
+  color: lime;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 0;
+  display: flex; /* 아이콘 정렬을 위해 flex 추가 */
+  align-items: center; /* 수직 정렬 */
+  justify-content: center; /* 수평 정렬 */
+}
+
+.setting-icon-image {
+  transition: transform 0.7s ease-in-out; /* 회전 애니메이션 추가 */
+}
+
+.setting-icon:hover .setting-icon-image {
+  transform: rotate(360deg); /* hover 시 360도 회전 */
+}
+
+.close-button{
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  position: absolute;
+  top: 10px; /* 팝업 내부 상단 */
+  right: 10px; /* 팝업 내부 오른쪽 */
+  background-color: black;
+  border: 1px solid lime;
+  border-radius: 3px;
+  color: lime;
+  font-size: 1rem;
+  cursor: pointer;
+}
+.settings-button{
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  background-color: black;
+  border: 1px solid lime;
+  border-radius: 3px;
+  color: lime;
+  font-size: 1rem;
+  cursor: pointer;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.settings-buttons{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.popup-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
